--- a/teht.4.html
+++ b/teht.4.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>teht.4</title>
+    <script src="teht.4.js" defer></script>
 </head>
 <body>
-$END$
+
 </body>
 </html>
